# bioforge

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  PUBLISHING.md  README.md  aligner.py  analyze.py  biocore.py  check.py  pyproject.toml  requirements.txt  setup.py  smart_translator.py
.claude/: napkin.md
.github/workflows/: tests.yml  wheels.yml
bioforge/: __init__.py  aligner.py  analyze.py  bgzf.py  biocore.py  qcreport.py  smart_translator.py
bioforge/engine/: __init__.py  _loader.py  build.py  engine.c
docs/: api_reference.md  architecture.md  benchmarks.md  roadmap.md
engine/: _loader.py  engine.c
samples/: hbb_normal.fa  hbb_sickle.fa  insulin_human.fa  insulin_variant.fa
tests/: test_aligner.py  test_analyze.py  test_bgzf.py  test_biocore.py  test_errors.py  test_qcreport.py  test_streaming.py  test_translator.py
tools/: bench_vs_biopython.py  ci_check.py  comparador.py  stress_test.py  visor.py
