[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bioforge"
dynamic = ["version"]
description = "High-performance bioinformatics engine for Edge Computing — 5-bit encoding, vectorised NumPy core, optional C backend"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Aarón Aranda Torrijos", email = "noe9601@gmail.com"},
]
keywords = ["bioinformatics", "genomics", "sequence-analysis", "edge-computing", "numpy", "fastq", "fasta"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-benchmark>=4.0",
    "hypothesis>=6.0",
]
bench = [
    "biopython>=1.80",
    "psutil>=5.9",
]

[project.urls]
Homepage = "https://github.com/erlanders177/bioforge"
Source   = "https://github.com/erlanders177/bioforge"
Issues   = "https://github.com/erlanders177/bioforge/issues"

[project.scripts]
bioforge-analyze = "bioforge.analyze:main"
bioforge-qc      = "bioforge.qcreport:main"
bioforge-bgzip   = "bioforge.bgzf:main"

# La versión vive solo en bioforge/__init__.py (una única fuente de verdad).
[tool.setuptools.dynamic]
version = {attr = "bioforge.__version__"}

[tool.setuptools.packages.find]
where   = ["."]
include = ["bioforge*"]

# Incluir el motor C compilado y su fuente dentro del paquete (wheel).
[tool.setuptools.package-data]
"bioforge.engine" = ["*.dll", "*.so", "*.dylib", "*.c"]
