[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bioforge"
dynamic = ["version"]
description = "High-performance bioinformatics engine for Edge Computing — 5-bit encoding, vectorised NumPy core, optional C backend"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Aarón Aranda Torrijos", email = "noe9601@gmail.com"},
]
keywords = ["bioinformatics", "genomics", "sequence-analysis", "edge-computing", "numpy", "fastq", "fasta"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-benchmark>=4.0",
    "hypothesis>=6.0",
]
bench = [
    "biopython>=1.80",
    "psutil>=5.9",
]

[project.urls]
Homepage = "https://github.com/erlanders177/bioforge"
Source   = "https://github.com/erlanders177/bioforge"
Issues   = "https://github.com/erlanders177/bioforge/issues"

[project.scripts]
bioforge-analyze = "bioforge.analyze:main"
bioforge-qc      = "bioforge.qcreport:main"
bioforge-bgzip   = "bioforge.bgzf:main"

# La versión vive solo en bioforge/__init__.py (una única fuente de verdad).
[tool.setuptools.dynamic]
version = {attr = "bioforge.__version__"}

[tool.setuptools.packages.find]
where   = ["."]
include = ["bioforge*"]

# Incluir el motor C compilado y su fuente dentro del paquete (wheel).
[tool.setuptools.package-data]
"bioforge.engine" = ["*.dll", "*.so", "*.dylib", "*.c"]

# ──────────────────────────────────────────────────────────────────────────────
# cibuildwheel — wheels nativos por plataforma (Windows / Linux / macOS).
# El motor se carga con ctypes (independiente de la ABI de Python), así que
# construimos UN wheel por plataforma con una sola versión de Python; el wheel
# resultante (py3-none-<plat>, ver setup.py) vale para todas las Python 3.
# ──────────────────────────────────────────────────────────────────────────────
[tool.cibuildwheel]
build = "cp312-*"
skip = "*-musllinux* *_i686 *-win32"
build-frontend = "build"
build-verbosity = 1                       # log de compilación visible en CI
# Verificación de humo en cada plataforma: el motor C DEBE cargar.
test-requires = "numpy"
test-command = "python {project}/tools/ci_check.py"

[tool.cibuildwheel.linux]
# zlib-devel da las cabeceras; libgomp (con gcc) se enlaza ESTÁTICO en el .so
# (ver build.py BIOFORGE_STATIC). El .so queda autocontenido salvo libs de la
# lista blanca de manylinux → no hace falta auditwheel: lo saltamos y
# etiquetamos manylinux2014 nosotros (BIOFORGE_MANYLINUX, ver setup.py).
before-all = "yum install -y zlib-devel || true"
environment = { BIOFORGE_MANYLINUX = "manylinux2014_x86_64" }
repair-wheel-command = ""                 # .so autocontenido → sin "repair"

[tool.cibuildwheel.macos]
# clang necesita libomp (Homebrew), que se enlaza ESTÁTICO; zlib es del sistema.
# El .so solo depende de libs del sistema → delocate no tiene nada que hacer.
before-all = "brew install libomp || true"
repair-wheel-command = ""
